# ChangeLog for dev-games/flatzebra
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/flatzebra/ChangeLog,v 1.24 2010/08/13 12:34:18 josejx Exp $

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org> flatzebra-0.1.5.ebuild:
  Marked ppc stable for bug #325135.

  01 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  flatzebra-0.1.5.ebuild:
  stable x86, bug 325135

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> flatzebra-0.1.5.ebuild:
  stable amd64, bug 325135

  21 May 2010; Pacho Ramos <pacho@gentoo.org> flatzebra-0.1.4.ebuild:
  stable amd64, bug 318891

  20 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  flatzebra-0.1.4.ebuild:
  x86 stable wrt bug #318891

*flatzebra-0.1.5 (17 May 2010)

  17 May 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +flatzebra-0.1.5.ebuild:
  version bump

  09 May 2010; Raúl Porcel <armin76@gentoo.org> flatzebra-0.1.3.ebuild,
  flatzebra-0.1.4.ebuild:
  Drop sparc keyword

*flatzebra-0.1.4 (06 Apr 2010)

  06 Apr 2010; Tristan Heaven <nyhm@gentoo.org> +flatzebra-0.1.4.ebuild:
  Version bump

  11 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> flatzebra-0.1.3.ebuild:
  Stable for ppc, bug 284947

  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> flatzebra-0.1.3.ebuild:
  sparc stable wrt #284947

  19 Sep 2009; Markus Meier <maekke@gentoo.org> flatzebra-0.1.3.ebuild:
  amd64/x86 stable, bug #284947

*flatzebra-0.1.3 (23 Jun 2009)

  23 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
  flatzebra-0.1.1.ebuild, flatzebra-0.1.2.ebuild, +flatzebra-0.1.3.ebuild:
  version bump

*flatzebra-0.1.2 (02 Mar 2009)

  02 Mar 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +flatzebra-0.1.2.ebuild:
  version bump

  21 Jun 2008; Friedrich Oslage <bluebird@gentoo.org>
  flatzebra-0.1.1.ebuild:
  Stable on sparc, bug #227657

  09 Apr 2007; Peter Weller <welp@gentoo.org> flatzebra-0.1.1.ebuild:
  Keyworded ~x86-fbsd wrt bug 173405
