@@ -1,4 +1,4 @@
 DIST flatzebra-0.1.5.tar.gz 340636 RMD160 7b75f83a09d3a6ddb8930ee0d8a4578c3f91c523 SHA1 0629a8a5b5be0bf818cd216af4396a91689cf17d SHA256 d663aa222fb8ba3974ccbe82778ecd38e64a2d7524b12e54b3cf0dbb9f017c07
-EBUILD flatzebra-0.1.5.ebuild 816 RMD160 3cd027a6b5a6f8ea2822191797e86ec9898fece1 SHA1 d3fdeafd2d19e25ceff8f599f61d4e251cdc7f72 SHA256 01993ab1248f3328895e591bff01debac31570b15711f08e942b931bd0a4f029
-MISC ChangeLog 3021 RMD160 dce246b0479903bcdc8f175599422b890cea4758 SHA1 82b9bf894f1e73a0670caebf9fa1da94b3fa4c0e SHA256 d998ba78139297a4888f07641302cf7ae5c5c0835e50fe774744d9d50a84b6e1
+EBUILD flatzebra-0.1.5.ebuild 1043 RMD160 f690628fb530b0d5f76a3a41e95d147ca6a980b9 SHA1 7f8505304395386a54190803797d29b25bb6c65d SHA256 8873bf5003600818e70012287d6fe31829a99facf85d2c9bc2fe40db9fb6c28f
+MISC ChangeLog 3132 RMD160 1b93377bae17d9b4ecadf9208cbbd9efd21491a0 SHA1 0ace1b4b3523253c462f2865d23ebd9931942a08 SHA256 f47f8f92c983b79b0556ec44d1adba9a1b7d39628e52269f78fc062861d30110
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
