@@ -1,6 +1,10 @@
 # ChangeLog for dev-games/flatzebra
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/flatzebra/ChangeLog,v 1.24 2010/08/13 12:34:18 josejx Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-games/flatzebra/ChangeLog,v 1.25 2011/01/16 03:35:49 mr_bones_ Exp $
+
+  16 Jan 2011; Michael Sterrett <mr_bones_@gentoo.org>
+  flatzebra-0.1.5.ebuild:
+  add static-libs support
 
   13 Aug 2010; Joseph Jezak <josejx@gentoo.org> flatzebra-0.1.5.ebuild:
   Marked ppc stable for bug #325135.
